Fix: Sửa lỗi đường dẫn import và file .npmrc

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,13 @@
         "name": "next"
       }
     ],
+
+    // === PHẦN SỬA ĐÂY ===
+    "baseUrl": ".", // <-- Thêm dòng này
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"] // Dòng này của bạn là OK
     }
+    // === HẾT PHẦN SỬA ===
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
